# zendriver-rs

./: .gitignore  404.html  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE-MIT  README.md  SEMVER.md  architecture.html  browser-context.html  cloudflare.html  datadome.html  error-reference.html  expect.html  faq.html  fetcher.html  fingerprint.html  frames.html  imperva.html  index.html  input.html  install.html  interception.html  mcp.html  migration-nodriver-python.html  migration-playwright.html  migration-zendriver-python.html  multi-tab.html  network-http.html  network-monitor.html  network.html  plugin.html  print.html  quickstart.html  release-plz-changelog.toml  release-plz.toml  searchindex.js  stealth.html  toc.html  (+1 more)
api/: crates.js  (+3 more)
crates/zendriver/: CHANGELOG.md  Cargo.toml
crates/zendriver-cloudflare/: CHANGELOG.md  Cargo.toml  README.md
crates/zendriver-cloudflare/src/: bypass.rs  click.rs  detect.js  detection.rs  error.rs  lib.rs
crates/zendriver-datadome/: CHANGELOG.md  Cargo.toml  README.md
crates/zendriver-datadome/src/: bypass.rs  captcha.rs  detect.js  detection.rs  error.rs  interception.rs  lib.rs
crates/zendriver-fetcher/: CHANGELOG.md  Cargo.toml  README.md
crates/zendriver-fetcher/src/: cache.rs  download.rs  error.rs  extract.rs  fetcher.rs  lib.rs  manifest.rs  platform.rs  resolver.rs  version.rs
crates/zendriver-fingerprints/: CHANGELOG.md  Cargo.toml  NOTICE
crates/zendriver-fingerprints/examples/: persona_pool.rs
crates/zendriver-fingerprints/src/: cache.rs  lib.rs
crates/zendriver-fingerprints/src/generative/: download.rs  mapping.rs  mod.rs  network.json
crates/zendriver-fingerprints/src/pool/: mod.rs
crates/zendriver-imperva/: CHANGELOG.md  Cargo.toml  README.md
crates/zendriver-imperva/src/: bypass.rs  captcha.rs  detect.js  detection.rs  error.rs  interception.rs  lib.rs
crates/zendriver-interception/: CHANGELOG.md  Cargo.toml  README.md
crates/zendriver-interception/src/: actor.rs  builder.rs  error.rs  host_matcher.rs  lib.rs  paused.rs  rule.rs  types.rs  url_pattern.rs
crates/zendriver-interception/src/snapshots/: zendriver_interception__types__tests__enum_cdp_strings.snap
crates/zendriver-mcp/: CHANGELOG.md  Cargo.toml  README.md  mcp-coverage-ledger.toml  public-api-baseline.txt
crates/zendriver-mcp/src/: errors.rs  lib.rs  main.rs  selectors.rs  server.rs  state.rs
crates/zendriver-mcp/src/snapshot/: html_trim.rs  mod.rs
crates/zendriver-mcp/src/tools/: actions.rs  cloudflare.rs  common.rs  cookies.rs  datadome.rs  download.rs  eval.rs  expect.rs  fetcher.rs  find.rs  fingerprints.rs  frames.rs  imperva.rs  intercept.rs  lifecycle.rs  mod.rs  monitor.rs  mouse.rs  navigation.rs  pdf.rs  reads.rs  request.rs  scroll.rs  snapshot.rs  stealth.rs  storage.rs  tabs.rs  window.rs
crates/zendriver-mcp/src/transport/: http.rs  mod.rs
crates/zendriver-mcp/tests/: http_smoke.rs  integration_actions.rs  integration_cloudflare.rs  integration_cookies_storage.rs  integration_coverage.rs  integration_expect.rs  integration_expect_drive.rs  integration_fetcher.rs  integration_find.rs  integration_imperva.rs  integration_interception.rs  integration_lifecycle.rs  integration_pdf.rs  integration_scroll.rs  integration_snapshot.rs  integration_tabs.rs  integration_window.rs  public_api.rs  schema_snapshots.rs  stdio_smoke.rs
crates/zendriver-mcp/tests/evals/: coverage-expansion.xml
crates/zendriver-mcp/tests/evaluations/: eval_set.xml
crates/zendriver-mcp/tests/snapshots/: schema_snapshots__actions_ack_out.snap  schema_snapshots__actions_action_out.snap  schema_snapshots__actions_clear_in.snap  schema_snapshots__actions_clear_mode.snap  schema_snapshots__actions_click_in.snap  schema_snapshots__actions_focus_in.snap  schema_snapshots__actions_hover_in.snap  schema_snapshots__actions_key_sequence_in.snap  schema_snapshots__actions_key_step.snap  schema_snapshots__actions_mouse_button_arg.snap  schema_snapshots__actions_press_in.snap  schema_snapshots__actions_scroll_in.snap  schema_snapshots__actions_set_value_in.snap  schema_snapshots__actions_set_value_mode.snap  schema_snapshots__actions_tap_in.snap  schema_snapshots__actions_type_in.snap  schema_snapshots__actions_upload_in.snap  schema_snapshots__cloudflare_snaps__cloudflare_outcome.snap  (+128 more)
crates/zendriver-stealth/: CHANGELOG.md  Cargo.toml  README.md
crates/zendriver-stealth/src/: error.rs  fingerprint.rs  flags.rs  headers.rs  input_profile.rs  lang.rs  lib.rs  observer.rs  patches.rs  profile.rs  ua.rs
crates/zendriver-stealth/tests/: persona_snapshot.rs
crates/zendriver-transport/: CHANGELOG.md  Cargo.toml  README.md
crates/zendriver-transport/src/: actor.rs  connection.rs  error.rs  frame.rs  lib.rs  observer.rs  session.rs  testing.rs
crates/zendriver/examples/: browser_context_isolation.rs  browser_request.rs  browserscan.rs  cloudflare_bypass.rs  cookies_persist.rs  downloads_dir.rs  expect_login_response.rs  fetcher_demo.rs  form_demo.rs  hello.rs  highlight_links.rs  iframe_inspect.rs  imperva_bypass.rs  intercept_block_ads.rs  intercept_modify_headers.rs  local_storage_demo.rs  multi_tab.rs  nav_history.rs  network_monitor.rs  persona_basic.rs  proxy_auth.rs  set_user_agent.rs  wait_for_page.rs  windows_cold_launch.rs
crates/zendriver/src/: browser.rs  browser_context.rs  element.rs  error.rs  expert.rs  geo_resolver.rs  isolated_world.rs  lib.rs  network_idle.rs  preferences.rs  proxy.rs  query.rs  request.rs  response_body.rs  tab.rs  tracker.rs  trackers.txt  url_matcher.rs  window.rs
crates/zendriver/tests/: accept_encoding_coherence.rs  cloudflare_phase5.rs  datadome_v0.rs  facade_observer_reexports.rs  find_frame_selectors.rs  find_predicate_iframe.rs  find_visible_only.rs  fingerprint_integration.rs  imperva_v0.rs  integration_phase1.rs  integration_phase2.rs  integration_phase3.rs  integration_phase4.rs  integration_phase5.rs  network_monitor_http.rs  preferences_integration.rs  prerelease_verification.rs  stealth_native_masking.rs  stealth_phase2.rs  tracker_blocklist_integration.rs  workspace_hygiene.rs
(+9965 files in other folders)
