[workspace]
resolver = "3"
members = [
    "crates/zendriver",
    "crates/zendriver-transport",
    "crates/zendriver-stealth",
    "crates/zendriver-cloudflare",
    "crates/zendriver-interception",
    "crates/zendriver-fetcher",
    "crates/zendriver-mcp",
    "crates/zendriver-imperva",
    "crates/zendriver-datadome",
    "crates/zendriver-fingerprints",
    "crates/locale-gen",
]

[workspace.package]
edition = "2024"
rust-version = "1.85"
license = "MIT OR Apache-2.0"
repository = "https://github.com/TurtIeSocks/zendriver-rs"
authors = ["zendriver-rs contributors"]

[workspace.dependencies]
# Internal
zendriver               = { path = "crates/zendriver", version = "0.3.4", default-features = false }
zendriver-transport     = { path = "crates/zendriver-transport", version = "0.2.1" }
zendriver-stealth       = { path = "crates/zendriver-stealth", version = "0.8.1" }
zendriver-cloudflare    = { path = "crates/zendriver-cloudflare", version = "0.2.9" }
zendriver-interception  = { path = "crates/zendriver-interception", version = "0.3.11" }
zendriver-fetcher       = { path = "crates/zendriver-fetcher", version = "0.1.12" }
zendriver-mcp           = { path = "crates/zendriver-mcp", version = "0.13.0" }
zendriver-imperva       = { path = "crates/zendriver-imperva", version = "0.2.12" }
zendriver-datadome      = { path = "crates/zendriver-datadome", version = "0.1.14" }
zendriver-fingerprints  = { path = "crates/zendriver-fingerprints", version = "0.2.16" }

# MCP server
rmcp        = { version = "1.7", default-features = false }
rmcp-macros = { version = "1.7" }
schemars    = "1.0"
clap        = { version = "4", features = ["derive"] }
axum        = { version = "0.7" }

# External — runtime
tokio              = { version = "1.40",  features = ["full"] }
tokio-util         = { version = "0.7",   features = ["rt"] }
tokio-tungstenite  = { version = "0.24" }
tokio-stream       = { version = "0.1",   features = ["sync"] }
futures            = { version = "0.3" }
async-trait        = { version = "0.1" }

# External — CDP
chromiumoxide_cdp  = { version = "0.7" }

# External — serde
serde              = { version = "1",     features = ["derive"] }
serde_json         = { version = "1" }

# External — errors / logging
thiserror          = { version = "1" }
tracing            = { version = "0.1" }

# External — utilities
url                = { version = "2" }
percent-encoding   = { version = "2" }
tempfile           = { version = "3" }
sysinfo            = { version = "0.32", default-features = false, features = ["system"] }
num_cpus           = "1"
regex              = "1"
bitflags           = "2"
unicode-segmentation = "1"
rand               = { version = "0.8", default-features = false, features = ["std", "std_rng", "small_rng"] }
base64             = "0.22"
reqwest            = { version = "0.12", default-features = false, features = ["rustls-tls", "gzip", "deflate", "stream"] }
zip                = { version = "2",    default-features = false, features = ["deflate"] }
sha2               = "0.10"
dirs               = "5"
glob               = "0.3"
uuid               = { version = "1",     features = ["v4"] }
psl                = "2"

# Dev-deps
tokio-test         = { version = "0.4" }
wiremock           = { version = "0.6" }
insta              = { version = "1",     features = ["yaml", "json"] }
serial_test        = { version = "3" }
tracing-subscriber = { version = "0.3",   features = ["env-filter"] }

[workspace.lints.rust]
unsafe_code = "deny"

[workspace.lints.clippy]
todo          = "warn"
unimplemented = "warn"
panic         = "warn"
