[package]
name = "zendriver-fetcher"
description = "Chrome binary downloader for zendriver"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[lints]
workspace = true

[dependencies]
tokio.workspace      = true
reqwest.workspace    = true
zip.workspace        = true
sha2.workspace       = true
dirs.workspace       = true
serde.workspace      = true
serde_json.workspace = true
thiserror.workspace  = true
tracing.workspace    = true
futures.workspace    = true

[dev-dependencies]
tokio-test.workspace = true
wiremock.workspace   = true
tempfile.workspace   = true
