[package]
name = "zendriver-fetcher"
description = "Chrome binary downloader for zendriver"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
readme = "../../README.md"
homepage = "https://github.com/cdpdriver/zendriver-rs"
documentation = "https://docs.rs/zendriver-fetcher"
keywords = ["chrome", "download", "fetcher", "browser", "zendriver"]
categories = ["web-programming", "command-line-utilities"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lints]
workspace = true

[dependencies]
tokio.workspace      = true
reqwest.workspace    = true
zip.workspace        = true
sha2.workspace       = true
dirs.workspace       = true
serde.workspace      = true
serde_json.workspace = true
thiserror.workspace  = true
tracing.workspace    = true
futures.workspace    = true

[dev-dependencies]
tokio-test.workspace = true
wiremock.workspace   = true
tempfile.workspace   = true
