[package]
name = "zendriver-fingerprints"
description = "Real-device persona sources (pool + generative) for zendriver-rs"
version = "0.1.3"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[lints]
workspace = true

[features]
default = []
pool = ["dep:reqwest", "dep:dirs"]
generative = []

[dependencies]
zendriver-stealth.workspace = true
serde.workspace             = true
serde_json.workspace        = true
thiserror.workspace         = true
tracing.workspace           = true
fastrand                    = "2"
reqwest  = { workspace = true, optional = true }
dirs     = { workspace = true, optional = true }

[[example]]
name = "persona_pool"
required-features = ["pool"]
