[package]
name = "zendriver-fingerprints"
description = "Real-device persona sources (pool + generative) for zendriver-rs"
version = "0.3.4"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[lints]
workspace = true

[features]
default = []
pool = ["dep:reqwest", "dep:dirs"]
generative = ["dep:reqwest", "dep:dirs", "dep:zip"]
# Overlay a coherent country locale onto a generated persona.
geo = ["zendriver-stealth/geo"]

[dependencies]
zendriver-stealth.workspace = true
serde.workspace             = true
serde_json.workspace        = true
thiserror.workspace         = true
tracing.workspace           = true
fastrand                    = "2"
reqwest  = { workspace = true, optional = true }
dirs     = { workspace = true, optional = true }
zip      = { workspace = true, optional = true }

[dev-dependencies]
tokio    = { workspace = true }
wiremock = { workspace = true }
tempfile = { workspace = true }

[[example]]
name = "persona_pool"
required-features = ["pool"]
