[package]
name = "zendriver-interception"
description = "Network interception (Fetch.* CDP domain) for zendriver"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[lints]
workspace = true

[dependencies]
zendriver-transport.workspace = true
tokio.workspace               = true
tokio-util.workspace          = true
tokio-stream.workspace        = true
async-trait.workspace         = true
futures.workspace             = true
serde.workspace               = true
serde_json.workspace          = true
thiserror.workspace           = true
tracing.workspace             = true
base64                        = "0.22"
glob.workspace                = true

[dev-dependencies]
tokio-test.workspace = true
zendriver-transport  = { workspace = true, features = ["testing"] }
