[package]
name = "zendriver-interception"
description = "Network interception (Fetch.* CDP domain) for zendriver"
version = "0.3.3"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
readme = "../../README.md"
homepage = "https://github.com/TurtIeSocks/zendriver-rs"
documentation = "https://docs.rs/zendriver-interception"
keywords = ["interception", "network", "fetch", "cdp", "zendriver"]
categories = ["web-programming", "network-programming"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lints]
workspace = true

[features]
# `test-support`: enables a small surface of constructors (`InterceptHandle::for_tests`) that
# downstream crates' unit tests can use to populate the type without going
# through the full actor pipeline. Not intended for production use — gated
# off by default and `#[doc(hidden)]`.
test-support = []

[dependencies]
zendriver-transport.workspace = true
tokio.workspace               = true
tokio-util.workspace          = true
tokio-stream.workspace        = true
async-trait.workspace         = true
futures.workspace             = true
serde.workspace               = true
serde_json.workspace          = true
thiserror.workspace           = true
tracing.workspace             = true
base64                        = "0.22"
glob.workspace                = true
regex.workspace               = true

[dev-dependencies]
tokio-test.workspace = true
zendriver-transport  = { workspace = true, features = ["testing"] }
insta.workspace      = true
