[package]
name = "zendriver-mcp"
version = "0.10.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "MCP server exposing zendriver-rs's stealth browser automation to MCP clients."
keywords = ["mcp", "browser", "automation", "cdp", "stealth"]
categories = ["command-line-utilities", "web-programming::http-server"]
readme = "README.md"
homepage = "https://github.com/TurtIeSocks/zendriver-rs"
documentation = "https://turtiesocks.github.io/zendriver-rs/mcp.html"

[[bin]]
name = "zendriver-mcp"
path = "src/main.rs"

[lib]
path = "src/lib.rs"

[features]
default = ["interception", "expect", "cloudflare", "imperva", "datadome", "fetcher", "monitor", "tracker-blocking"]
interception  = ["zendriver/interception", "dep:uuid"]
tracker-blocking  = ["zendriver/tracker-blocking"]
expect        = ["zendriver/expect", "dep:uuid"]
monitor       = ["zendriver/monitor", "dep:uuid", "dep:futures"]
cloudflare    = ["zendriver/cloudflare"]
imperva       = ["zendriver/imperva"]
datadome      = ["zendriver/datadome"]
fetcher       = ["zendriver/fetcher"]
fingerprints      = ["dep:zendriver-fingerprints"]
geo               = ["zendriver/geo", "zendriver-stealth/geo", "dep:zendriver-stealth"]
integration-tests = []
# Gate the public-api coverage check so it ONLY runs in the dedicated nightly
# CI job. `cargo test -p zendriver-mcp` (default, stable) must NOT compile or
# run this test.
public-api-check  = []

[dependencies]
zendriver           = { workspace = true }
rmcp                = { workspace = true, features = ["server", "macros", "schemars", "transport-io", "transport-streamable-http-server"] }
schemars            = { workspace = true }
tokio               = { workspace = true }
tokio-util          = { workspace = true }
tracing             = { workspace = true }
tracing-subscriber  = { workspace = true }
serde               = { workspace = true }
serde_json          = { workspace = true }
thiserror           = { workspace = true }
clap                = { workspace = true }
url                 = { workspace = true }
percent-encoding    = { workspace = true }
regex               = { workspace = true }
async-trait         = { workspace = true }
base64              = { workspace = true }
axum                = { workspace = true }
uuid                    = { workspace = true, optional = true }
futures                 = { workspace = true, optional = true }
zendriver-fingerprints  = { workspace = true, optional = true, features = ["pool", "generative"] }
zendriver-stealth       = { workspace = true, optional = true }

[dev-dependencies]
tokio-test = { workspace = true }
tempfile   = { workspace = true }
wiremock   = { workspace = true }
insta      = { workspace = true }
# `toml` is used by the `public-api-check` test to parse `mcp-coverage-ledger.toml`.
toml       = { version = "0.8", default-features = false, features = ["parse"] }
# rmcp client features for end-to-end smoke tests — child-process for stdio,
# streamable-http-client-reqwest for HTTP.
rmcp       = { workspace = true, features = ["client", "transport-child-process", "transport-streamable-http-client", "transport-streamable-http-client-reqwest"] }
# `test-support` enables `InterceptHandle::for_tests`, which the lifecycle
# close-cleanup unit test uses to populate `SessionState::rules` without
# spinning up a real interception actor. Path-only (no version) so `cargo
# publish` strips this dev-dep from the published manifest — avoids
# requiring the `test-support` feature on crates.io's `zendriver-interception`.
zendriver-interception = { path = "../zendriver-interception", features = ["test-support"] }

[lints]
workspace = true
