[package]
name = "zendriver-stealth"
description = "CDP-level stealth patches for zendriver (populated in Phase 2)"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[lints]
workspace = true
