[package]
name = "zendriver-stealth"
description = "Anti-detection patches and profiles for zendriver"
version = "0.1.2"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
readme = "../../README.md"
homepage = "https://github.com/TurtIeSocks/zendriver-rs"
documentation = "https://docs.rs/zendriver-stealth"
keywords = ["stealth", "anti-detection", "browser", "cdp", "zendriver"]
categories = ["web-programming"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lints]
workspace = true

[dependencies]
zendriver-transport.workspace = true
chromiumoxide_cdp.workspace   = true
tokio.workspace               = true
async-trait.workspace         = true
futures.workspace             = true
serde.workspace               = true
serde_json.workspace          = true
thiserror.workspace           = true
tracing.workspace             = true
sysinfo.workspace             = true
num_cpus.workspace            = true

[dev-dependencies]
tokio-test.workspace          = true
insta.workspace               = true
zendriver-transport           = { workspace = true, features = ["testing"] }
