[package]
name = "zendriver-transport"
description = "Internal: WebSocket + CDP routing actor for zendriver"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[lints]
workspace = true

[features]
default = []
# Exposes the MockConnection testing helper to downstream users.
testing = []

[dependencies]
chromiumoxide_cdp.workspace   = true
tokio.workspace               = true
tokio-util.workspace          = true
tokio-tungstenite.workspace   = true
tokio-stream.workspace        = true
futures.workspace             = true
serde.workspace               = true
serde_json.workspace          = true
thiserror.workspace           = true
tracing.workspace             = true

[dev-dependencies]
tokio-test.workspace          = true
tracing-subscriber.workspace  = true
