[package]
name = "zendriver-transport"
description = "Internal: WebSocket + CDP routing actor for zendriver"
version = "0.1.1"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
readme = "../../README.md"
homepage = "https://github.com/TurtIeSocks/zendriver-rs"
documentation = "https://docs.rs/zendriver-transport"
keywords = ["cdp", "chrome", "devtools", "websocket", "zendriver"]
categories = ["web-programming", "network-programming"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lints]
workspace = true

[features]
default = []
# Exposes the MockConnection testing helper to downstream users.
testing = []

[dependencies]
async-trait.workspace         = true
chromiumoxide_cdp.workspace   = true
tokio.workspace               = true
tokio-util.workspace          = true
tokio-tungstenite.workspace   = true
tokio-stream.workspace        = true
futures.workspace             = true
serde.workspace               = true
serde_json.workspace          = true
thiserror.workspace           = true
tracing.workspace             = true

[dev-dependencies]
tokio-test.workspace          = true
tracing-subscriber.workspace  = true
