[package]
name = "zendriver"
description = "Async-first, undetectable browser automation via the Chrome DevTools Protocol"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
readme = "../../README.md"

[lints]
workspace = true

[features]
default = []
# Enables real-Chrome integration tests (requires Chrome installed on $PATH).
integration-tests = []
# Nightly stealth tests against external sites (sannysoft, areyouheadless).
# Separate from integration-tests because external sites flake.
stealth-tests = ["integration-tests"]
# Re-exports the MockConnection testing helper for downstream users.
testing = ["zendriver-transport/testing"]

[dependencies]
zendriver-transport.workspace = true
zendriver-stealth.workspace   = true
async-trait.workspace         = true
chromiumoxide_cdp.workspace   = true
tokio.workspace               = true
tokio-util.workspace          = true
serde.workspace               = true
serde_json.workspace          = true
thiserror.workspace           = true
tracing.workspace             = true
url.workspace                 = true
tempfile.workspace            = true
futures.workspace             = true
regex.workspace               = true
bitflags.workspace            = true
rand.workspace                = true
base64.workspace              = true

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
tokio-test.workspace          = true
insta.workspace               = true
tracing-subscriber.workspace  = true
wiremock = { workspace = true, optional = false }
serial_test = { workspace = true, optional = false }
zendriver-transport = { workspace = true, features = ["testing"] }

[[example]]
name = "hello"
required-features = []

[[example]]
name = "set_user_agent"
required-features = []

[[example]]
name = "browserscan"
required-features = []

[[example]]
name = "highlight_links"
required-features = []

[[example]]
name = "form_demo"
required-features = []

[[example]]
name = "wait_for_page"
required-features = []
